fix button align

--- a/example/index.less
+++ b/example/index.less
@@ -373,6 +373,7 @@ a,
   color: #fff!important;
 }
 .candy-nft-info {
+  color: #fff!important;
   vertical-align: middle !important;
   padding: 12px !important;
   background-color: #072d34 !important;
@@ -475,4 +476,8 @@ a,
 }
 .candy-modal-close-btn .close:before, .candy-modal-close-btn .close:after {
   background-color: #fff!important;
+}
+
+.candy-sell-modal-button {
+  display: block!important;
 }
